fixing image spill around ipad size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,7 +36,7 @@
   padding: 12px 0;
 
   .navbar-brand {
-    height: 192px;
+    height: 172px;
 
     img {
       @include brand-image;
